[package]
name = "umbra_profiler"
version = "0.1.0"
authors = ["michael schott", "johann schworm"]
edition = "2018"
publish = false

workspace = "../"

[lib]
required-features = ["js"]
crate-type = ["cdylib", "rlib"]

[build]
target = "x86_64-apple-darwin"

[dependencies.web-sys]
version = "0.3.51"
features = [
  'console',
  'Crypto',
  'Document',
  'Element',
  'Node',
  'NodeList',
  'Window',
  'MouseEvent',
  'KeyboardEvent',
  'HtmlTextAreaElement',
  'HtmlCanvasElement',
  'WebSocket',
  'Performance',
]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
log = "0.4.14"
chrono = "0.4.19"
lazy_static = "1.4.0"
encode_unicode = "0.3.6"
unicode-width = "0.1.8"
csv = "1.0.0-beta.3"
parquet = { version = "4.4.0", default-features = false, features = ["arrow","base64","snap","brotli","clap","serde_json","flate2"]}
getrandom = { version = "0.2", features = ["js"] }

[dependencies.js-sys]
version = "^0.3.32"
features = []

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[profile.release]
lto = true
opt-level = "s"
